@@ -121,9 +121,9 @@ Mojolicious::Plugin::Config - Perl-ish configuration plugin
 =head1 DESCRIPTION
 
 L<Mojolicious::Plugin::Config> is a Perl-ish configuration plugin. The
-application object can be accessed via the C<app> helper. You can extend the
-normal configuration file C<myapp.conf> with C<mode> specific ones like
-C<myapp.$mode.conf>.
+application object can be accessed via C<$app> or the C<app> function. You
+can extend the normal configuration file C<myapp.conf> with C<mode> specific
+ones like C<myapp.$mode.conf>.
 
 =head1 OPTIONS
 
