@@ -1,1 +1,1 @@
-{works => "too!"};
+{one => app->secret, two => $app->secret, works => "too!"};
